--- a/src/containers/Authentication/SignIn.css
+++ b/src/containers/Authentication/SignIn.css
@@ -1,12 +1,67 @@
 .formC {
   display: flex;
+  box-sizing: border-box;
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
   height: 15rem;
   width: 40%;
   position: absolute;
+  border: 5px solid rgb(43, 27, 27);
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
+label {
+  margin: 5px;
+  text-align: right;
+}
+
+span {
+  flex-basis: 50%;
+  max-height: 10%;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+button {
+  margin-top: 2%;
+  color: aliceblue;
+  background-color: rgb(43, 27, 27);
+  cursor: pointer;
+  border-radius: 12px;
+  font-size: large;
+  text-decoration: none;
+  transition-duration: 0.4s;
+}
+button:hover {
+  box-shadow: 0 12px 16px 0 rgba(223, 11, 11, 0.24),
+    0 17px 50px 0 rgba(218, 10, 10, 0.19);
+}
+
+/* .error {
+  animation: 1.5s shake infinite alternate;
+  animation-iteration-count: 1;
+  color: red;
+}
+
+@keyframes shake {
+  0% {
+    transform: skewX(-20deg);
+  }
+  5% {
+    transform: skewX(20deg);
+  }
+  10% {
+    transform: skewX(-20deg);
+  }
+  15% {
+    transform: skewX(20deg);
+  }
+  20% {
+    transform: skewX(0deg);
+  }
+  100% {
+    transform: skewX(0deg);
+  }
+} */
